[package]
name = "yac"
version = "0.1.1"
edition = "2021"
authors = ["Daniel Cormier"]
description = "Just a placeholder."
homepage = "https://github.com/dcormier/yac-rs"
license-file = "LICENSE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
